--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "superflat-admin",
-  "version": "0.1.0",
+  "name": "poe-ui",
+  "version": "1.0.0",
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-angular-templates": "1.1.0",
@@ -10,8 +10,7 @@
     "grunt-contrib-nodeunit": "0.4.1",
     "grunt-contrib-uglify": "0.8.0",
     "grunt-contrib-watch": "1.1.0",
-    "grunt-csssplit": "0.4.0",
-    "ng-if-bootstrap-grid": "0.1.0"
+    "grunt-csssplit": "0.4.0"
   },
   "dependencies": {
     "buffer": "5.2.0"
