--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 # Ignore UI build artifacts
 node_modules/
 
+truffle-secret.js
+
 # Need these to serve from github.io
 # ui/js/templates\.js
 # ui/js/ProofOfExistence\.json
+
+truffle-secrets\.js
